# omnicv_2023_starter_kit

./: .gitignore  LICENSE  README.md  bundle_results.sh  dataloader.py  infer.py  main.py  metrics.py  model.py  pyproject.toml  train.py  utils.py
configs/: infer.yaml  train.yaml
configs/splits/: infer.txt  train.txt  val.txt
